# visSele

./: .gitignore  .gitmodules  MakeUtil.py  Makefile  Makefile.in  Makefile_cc.sh  experiment.c  experiment.cpp  hw.c  main.cpp  playground.cpp  run10.sh  test.ic.json  untitled.sublime-project  untitled.sublime-workspace  visSele_run.sh
Arduino/AirControlWS/: AirControlWS.ino
Arduino/AirControlWS_LED20_W5500/: AirControlWS_LED20_W5500.ino  LED.ino
CameraLayer/: CameraLayer_BMP.cpp  CameraLayer_GIGE_MindVision.cpp  Makefile  cameraLayer.cpp
CameraLayer/include/: CameraLayer.hpp  CameraLayer_BMP.hpp  CameraLayer_GIGE_MindVision.hpp  cameraLayer.hpp  cameraLyaer.hpp
DB/DB_GQ_Server/: package-lock.json  package.json
DB/InspQueryServer/: index.js
DB/apollo_gql_server/: index.js  package-lock.json  package.json
DB/mongoTest/: main.js  package.json
DataChannel/: DatCH_BPG.cpp  DatCH_WebSocket.cpp  Makefile  ws_server_util.cpp
DataChannel/include/: DatCH.hpp  DatCH_BPG.hpp  DatCH_Image.hpp  DatCH_WebSocket.hpp  DatCH_structs.hpp  websocket_conn.hpp
DataChannel/include_priv/: ws_server_util.h
DataSource/include/: ImageSource.hpp
DynamicArray/: DynamicAnrray.cpp  DynamicArray.cpp  Makefile
DynamicArray/include/: DynamicArray.hpp
GLAcc/: GLAcc_Framework.cpp  Makefile  Shader.cpp
GLAcc/include/: GLAcc.h  Shader.h
InspectionCore/: Ext_Util_API.cpp  Makefile  MicroInsp_FType.cpp  libmvsdk.dylib  main.cpp  tmpCodes.cpp  wiringPanel.cpp
InspectionCore/BPG_Protocol/: BPG_Link_Interface_SharedMemoryChannel.cpp  BPG_Link_Interface_WebSocket.cpp  BPG_Protocol.cpp  IPC_Channel.cpp  Makefile  ws_server_util.cpp
InspectionCore/CameraLayer/: CameraLayer.cpp  CameraLayerManager.cpp  CameraLayer_Aravis.cpp  CameraLayer_BMP.cpp  CameraLayer_BMP_carousel.cpp  CameraLayer_GIGE_MindVision.cpp  CameraLayer_UVC.cpp  Makefile  (+1 more)
InspectionCore/Core0_1/: CMakeLists.txt  InitCMake.sh  Makefile  Makefile_mods  democode.cpp  main.cpp  tmpCodes.cpp  wiringPanel.cpp
InspectionCore/Core0_1/data/: cameraCalibration.json  default_camera_param.json  default_camera_setting.json
InspectionCore/Core0_1/include/: main.h
InspectionCore/Core0_1/init_data/: stageLightCalib.json
InspectionCore/CoreHub/: CMakeLists.txt  InitCMake.sh  InspHub  InspectionTarget.cpp  Makefile  Makefile_mods  Note.md  Run.sh  compile.sh  helloTest.cpp  install_manifest.txt  main.cpp  tmpCodes.cpp  wiringPanel.cpp  wiringPanel_ext.cpp
InspectionCore/CoreHub/InspectionTarget/: CameraManager.hpp  InspTar_ImgSrc.cpp  InspTar_ImgSrc.hpp  InspTar_Orientation.hpp  InspTar_Orientation_ColorRegionOval.cpp  InspTar_Orientation_ColorRegionOval.hpp  InspTar_Orientation_ShapeBasedMatching.cpp  InspTar_SpriteDraw.cpp  InspTar_SpriteDraw.hpp  InspTar_SurfaceCheckSimple.cpp  InspTar_SurfaceCheckSimple.hpp  InspTar_WBar_SizeComp.cpp  InspTar_WBar_SizeComp.hpp  InspTars.hpp  InspectionTarget.cpp  InspectionTarget.hpp  StageInfo.hpp  StageInfo_Orientation.hpp
InspectionCore/CoreHub/PlatUtil/: PlatUtil.hpp  macUtil.mm
InspectionCore/CoreHub/data/: ACMD_LIB.js
InspectionCore/CoreHub/data/Pack_xprj/: lib_common.js  lib_test1.js
InspectionCore/CoreHub/data/Test1.xprj/: XCmds.json  lib_calc1.json  main.json
InspectionCore/CoreHub/data/Test1.xprj/it_ImTran/: main.json
InspectionCore/CoreHub/data/Test1.xprj/it_rule1/: main.json
InspectionCore/CoreHub/data/Test1.xprj/it_shapeBasedMatching_test/: main.json
InspectionCore/CoreHub/data/Test1.xprj/it_testRule/: main.json
InspectionCore/CoreHub/include/: BinaryImageTemplateFitting.hpp  InspTars.hpp  InspectionTarget.hpp  MicroInsp_FType.hpp  main.h
InspectionCore/CoreHub/init_data/: cache_def.hydef  default_camera_param.json  machine_info  machine_setting.json
InspectionCore/MatchingEngine/: CMakeLists.txt  ContourGrid.cpp  FM_Blank.cpp  FM_GenMatching.cpp  FM_camera_calibration.cpp  FeatureExtractor.cpp  FeatureManager_gen.cpp  FeatureManager_group.cpp  FeatureManager_sig360_circle_line.cpp  FeatureManager_stage_light_report.cpp  FeatureReport_UTIL.cpp  Makefile  MatchingCore.cpp  MatchingEngine.cpp
InspectionCore/MatchingEngine/MorphEngine/: Makefile
InspectionCore/MatchingEngine/MorphEngine/GLAcc_shaders/meshGD/: warpDiff.frag
InspectionCore/MatchingEngine/include/: ContourGrid.h  FM_Blank.h  FM_GenMatching.h  FM_camera_calibration.h  FeatureManager.h  FeatureManager_binary_processing.h  FeatureManager_gen.h  FeatureManager_group.h  FeatureManager_nop.h  FeatureManager_sig360_circle_line.h  FeatureManager_stage_light_report.h  FeatureReport.h  MatchingEngine.h
InspectionCore/MatchingEngine/include_priv/: FeatureReport_UTIL.h  MatchingCore.h  rotCaliper.h
InspectionHub/: Ext_Util_API.cpp  InspHub  Makefile  Makefile_cc.sh  main.cpp  wiringPanel.cpp
MLNN/: MLNL.cpp  MLNN.cpp  MLNNUtil.cpp  MLOpt.cpp  Makefile
MatchingEngine/: ContourGrid.cpp  FM_camera_calibration.cpp  FeatureExtractor.cpp  FeatureManager.cpp  FeatureManager_group.cpp  FeatureManager_platingCheck.cpp  FeatureManager_sig360_circle_line.cpp  FeatureReport_UTIL.cpp  Makefile  MatchingCore.cpp  MatchingEngine.cpp  experiment.cpp
PCB/: 20190213.brd  20190213.sch  20190314.brd  20190314.sch  20190320.brd  20190320.sch  20190501.brd  20190501.sch  20190505.brd  20190505.sch  BRDSCH_REPLACER.sh  DBL_INSTs.sh
Peripheral/: PhrozenWatch.sh
UI/: ws.html  wsws
VisSeleDefineDocParser/: Makefile  VisSeleDefineDocParser.cpp
VisSeleFeatureManager/: Makefile  VisSeleFeatureManager.cpp
acvImage/: Makefile  acvImage.cpp  acvImage_BasicDrawTool.cpp  acvImage_BasicTool.cpp  acvImage_ComponentLabelingTool.cpp  acvImage_MophologyTool.cpp  acvImage_OtherTool.cpp  acvImage_SpDomainTool.cpp  acvImage_ToolBox.cpp
common_lib/: Makefile  Util.c
contrib/: Makefile
data/: cameraCalibration.json  default_camera_param.json  featureDetect.json  target.json
include/: BinaryImageTemplateFitting.hpp  experiment.h  main.h  playground.h
jpeglib/: Makefile
logctrl/: logctrl.c
scripts/: boot_script.py  info.json  launcher.js  msysSetup.sh  router_template.py
setupTool/: msysSetup.sh
sidePrj/: Makefile
(+849 files in other folders)
